tests/health/tests__lsp__type_definition_test.toit.gold
tests/lsp/type_definition_test.toit:93:8: error: Invalid type
bad -> fun:
       ^~~
tests/lsp/type_definition_test.toit:99:9: error: Invalid type
bad x / fun:
        ^~~
tests/lsp/type_definition_test.toit:106:30: error: Invalid type
bad2 -> prefix.ImportedClass.named:
                             ^~~~~
tests/lsp/type_definition_test.toit:112:19: error: Ambiguous resolution of type: 'ImportedClass'
bad3 -> ambiguous.ImportedClass:
                  ^~~~~~~~~~~~~
tests/lsp/definition_imported.toit:3:7: note: Resolution candidate for 'ImportedClass'
class ImportedClass:
      ^~~~~~~~~~~~~
tests/lsp/definition_imported2.toit:7:7: note: Resolution candidate for 'ImportedClass'
class ImportedClass:
      ^~~~~~~~~~~~~
tests/lsp/type_definition_test.toit:118:19: error: Invalid type
bad4 -> SomeClass.static_fun:
                  ^~~~~~~~~~
tests/lsp/type_definition_test.toit:124:19: error: Invalid type
bad5 -> SomeClass.static_fun:
                  ^~~~~~~~~~
tests/lsp/type_definition_test.toit:130:19: error: Invalid type
bad6 -> SomeClass.non_existent:
                  ^~~~~~~~~~~~
